--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -8,4 +8,4 @@ actions:
         branches:
           - "master"
     bazel_commands:
-      - test //... --config=workflows
+      - test //app/... --config=workflows
