Go local for everything

--- a/.bazelrc
+++ b/.bazelrc
@@ -60,8 +60,11 @@ build:workflows --remote_instance_name=buildbuddy-io/buildbuddy/workflows
 build:workflows --color=yes
 build:workflows --disk_cache=
 
-build:workflows --bes_backend=grpc://localhost:1985
 build:workflows --bes_results_url=http://localhost:8080/invocation/
+build:workflows --bes_backend=grpc://localhost:1985
+build:workflows --remote_cache=grpc://localhost:1985
+build:workflows --remote_executor=grpc://localhost:1985
+build:workflows --remote_header=x-buildbuddy-api-key=XrB5MdZmngWlIYu0j2Pa
 build:workflows --nocache_test_results
 
 # By default, build logs get sent to the production server
